--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -181,7 +181,7 @@
             <TextView
                 android:id="@+id/diseaseList"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:paddingHorizontal="@dimen/dp12"
                 android:paddingBottom="12dp"
                 android:text="@string/aboutList"
