--- a/app/src/main/res/layout/current_cases_detail.xml
+++ b/app/src/main/res/layout/current_cases_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
@@ -8,21 +9,12 @@
 
     <TextView
         android:id="@+id/labelCurrentLocation"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/std_text_size"
         android:text="@string/current_location"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/currentLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:textSize="@dimen/std_text_size"
-        app:layout_constraintStart_toEndOf="@id/labelCurrentLocation"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -30,10 +22,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textSize="@dimen/std_text_size"
         android:text="@string/active_county"
+        android:textSize="@dimen/std_text_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/labelCurrentLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/labelCurrentLocation" />
 
     <TextView
         android:id="@+id/activeCounty"
@@ -81,5 +73,12 @@
         android:textSize="@dimen/std_text_size"
         app:layout_constraintStart_toEndOf="@id/labelActiveCountry"
         app:layout_constraintTop_toTopOf="@id/labelActiveCountry" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
