--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:paddingBottom="10dp"
             tools:ignore="UselessParent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
