--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -97,7 +97,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/riskGraphCardView"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="400dp"
                     android:minHeight="40dp"
                     android:layout_margin="10dp"
                     app:cardBackgroundColor="@color/cardBackground"
@@ -108,11 +108,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/riskDisplayCardView">
 
-                    <com.github.mikephil.charting.charts.LineChart
-                        android:id="@+id/lineGraph"
-                        android:layout_height="match_parent"
-                        android:layout_width="match_parent"
-                        android:padding="@dimen/text_margin"/>
+                    <include layout="@layout/risk_chart_detail"/>
 
                 </androidx.cardview.widget.CardView>
 
