--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--    //TODO: change android:title={locationValue} to fill with stored locations-->
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_location_fragment_1"
@@ -27,6 +26,10 @@
                     android:id="@+id/nav_location_settings_fragment"
                     android:icon="@drawable/ic_baseline_add_location_24"
                     android:title="@string/manage_locations" />
+                <item
+                    android:id="@+id/nav_about_fragment"
+                    android:icon="@drawable/ic_baseline_info_24"
+                    android:title="@string/aboutAppHeading" />
             </group>
         </menu>
     </item>
