--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
@@ -16,16 +17,12 @@
             android:icon="@drawable/ic_outline_push_pin_24"
             android:visible="false"
             android:title="@string/store_location" />
-
     </group>
 
-    <item android:title="@string/settings">
+    <item android:id="@+id/menu_other"
+        tools:ignore="MenuTitle">
         <menu>
             <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/nav_location_settings_fragment"
-                    android:icon="@drawable/ic_baseline_add_location_24"
-                    android:title="@string/manage_locations" />
                 <item
                     android:id="@+id/nav_about_fragment"
                     android:icon="@drawable/ic_baseline_info_24"
