--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -24,6 +24,12 @@
         <menu>
             <group android:checkableBehavior="single">
                 <item
+                    android:id="@+id/nav_compare_fragment"
+                    android:icon="@drawable/ic_baseline_compare_arrows_24"
+                    android:title="@string/compareAppHeading" />
+            </group>
+            <group android:checkableBehavior="single">
+                <item
                     android:id="@+id/nav_about_fragment"
                     android:icon="@drawable/ic_baseline_info_24"
                     android:title="@string/aboutAppHeading" />
