--- a/app/src/main/res/layout/risk_chart_detail.xml
+++ b/app/src/main/res/layout/risk_chart_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/riskGraphLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Group Size vs. Exposure Risk"
+        android:text="@string/risk_graph_label"
         android:textStyle="bold"
         android:textSize="@dimen/std_text_size"
         android:layout_margin="@dimen/text_margin"
