--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -100,17 +100,18 @@
                     android:id="@+id/riskGraphCardView"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:minHeight="40dp"
                     android:layout_margin="10dp"
+                    android:elevation="10dp"
+                    android:minHeight="40dp"
+                    android:translationZ="0dp"
+                    app:barrierMargin="@dimen/text_margin"
                     app:cardBackgroundColor="@color/cardBackground"
                     app:cardCornerRadius="10dp"
-                    android:elevation="10dp"
-                    app:barrierMargin="@dimen/text_margin"
-                    android:translationZ="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/riskDisplayCardView">
 
-                    <include layout="@layout/risk_chart_detail"/>
+                    <include layout="@layout/risk_chart_detail" />
 
                 </androidx.cardview.widget.CardView>
 
